# samantha-agent

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  main.py  pyproject.toml  requirements.txt  server.py  start.bat
config/: persona.yaml  rules.yaml  settings.yaml  tools.yaml
docs/superpowers/plans/: 2026-06-08-samantha-v2-plan.md
docs/superpowers/specs/: 2026-06-08-samantha-v2-design.md
frontend/: index.html  package-lock.json  package.json  showcase.html  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  store.ts  types.ts
frontend/src/components/: ChatArea.tsx  ChatBox.tsx  ChatBubble.tsx  ChatInput.tsx  ConversationList.tsx  EmotionPanel.tsx  MemoryPanel.tsx  Sidebar.tsx  StatsCard.tsx
frontend/src/showcase/: App.tsx  index.css  main.tsx
src/: api.py  config.py  conversation_store.py
src/emotion/: __init__.py  detector.py  rules.py
src/graph/: graph.py  state.py  streaming.py
src/llm/: client.py  prompt_builder.py
src/memory/: base.py  immutable.py  long_term.py  orchestrator.py  short_term.py
src/safety/: guard.py  monitor.py
src/schemas/: agent.py  emotion.py  memory.py
src/tools/: __init__.py  emotion_diary.py  executor.py  memory_search.py  music_recommend.py  registry.py  schedule_reminder.py  weather_check.py
tests/: test_api.py  test_config.py  test_emotion.py  test_graph.py  test_integration.py  test_llm.py  test_memory.py  test_memory_retention.py  test_orchestrator.py  test_safety.py  test_schemas.py  test_sidebar_conversations.py  test_tool_calling.py  test_tools.py
(+9 files in other folders)
